--- a/pdf-meta.yaml
+++ b/pdf-meta.yaml
@@ -1,13 +1,26 @@
 ---
 geometry:
-- margin=1in
+- margin=1.5cm
+- bottom=2.5cm
+- top=2.5cm
+- headsep=0cm
+- headheight=1cm
 fontsize: 12pt
+author: Dipam Sen (Fun Planet)
 header-includes: |
-  \usepackage{mhchem}
-  \usepackage{tcolorbox}
-  \newtcolorbox{myquote}{colback=gray!25, colframe=gray!75!black}
-  \renewenvironment{quote}{\begin{myquote}}{\end{myquote}}
-  \newcommand{\ud}[2]{\underset{\text{#2}}{\ce{#1}}}
-  \let\OldRule\rule
-  \renewcommand{\rule}[2]{\OldRule{\linewidth}{#2}}
+    \usepackage{mhchem}
+    \usepackage{tcolorbox}
+    \usepackage{fancyhdr}
+    \usepackage{graphicx}
+    \pagestyle{fancy}
+    \thispagestyle{fancy}
+    \graphicspath{{./images/}}
+    \fancyhead[C]{\includegraphics[width=2cm]{fplogo}}
+    \renewcommand{\headrulewidth}{0pt}
+    \renewcommand{\footrulewidth}{2pt}
+    \newtcolorbox{myquote}{colback=gray!25, colframe=gray!75!black}
+    \renewenvironment{quote}{\begin{myquote}}{\end{myquote}}
+    \newcommand{\ud}[2]{\underset{\text{#2}}{\ce{#1}}}
+    \let\OldRule\rule
+    \renewcommand{\rule}[2]{\OldRule{\linewidth}{#2}}
 ...
