--- a/pdf-meta.yaml
+++ b/pdf-meta.yaml
@@ -4,18 +4,21 @@ geometry:
 - bottom=2.5cm
 - top=2.5cm
 - headsep=0cm
-- headheight=1cm
-fontsize: 12pt
+- headheight=5cm
+fontsize: 14pt
+documentclass: extarticle
 author: Dipam Sen (Fun Planet)
 header-includes: |
     \usepackage{mhchem}
     \usepackage{tcolorbox}
     \usepackage{fancyhdr}
     \usepackage{graphicx}
+    \usepackage{titling}
     \pagestyle{fancy}
-    \thispagestyle{fancy}
     \graphicspath{{./images/}}
     \fancyhead[C]{\includegraphics[width=2cm]{fplogo}}
+    \fancyhead[L]{JEE Mathematics\\~\\}
+    \fancyhead[R]{\thetitle{}\\~\\}
     \renewcommand{\headrulewidth}{0pt}
     \renewcommand{\footrulewidth}{2pt}
     \newtcolorbox{myquote}{colback=gray!25, colframe=gray!75!black}
