--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "mathh",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "scripts/index.js",
   "scripts": {
-    "convert": "node ."
+    "convert": "node scripts",
+    "mc": "node scripts/mass.js"
   },
   "repository": {
     "type": "git",
