--- a/config/html-meta.yaml
+++ b/config/html-meta.yaml
@@ -23,13 +23,10 @@ header-includes: |
     }
   </style>
   <script>
-    // if there is title remove the other title
-    if (document.querySelector(".title")) {
-      document.querySelector("h1:not(.title)").style.display = "none"
-    }
-  </script>
-  <script>
   addEventListener("DOMContentLoaded", () => {
+    if (document.querySelector(".title")) {
+      [...document.querySelectorAll("h1")].find(x => !x.classList.contains("title")).style.display = "none"
+    }
   const images = document.querySelectorAll("img")
   images.forEach(img => {
     img.setAttribute("src", '../../..'+img.getAttribute('src'))
