--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,10 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: docker://pandoc/latex
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: Build
         run: npm run build
 
       # Runs a set of commands using the runners shell
